added gc details